WIP: redesign configuration system (issue #601, #597)
Make per-filesystem configuration reachable through conventional NIO APIs
and fix the shared-provider-config bug. Breaking changes for 3.0.0-rc.

S3NioSpiConfiguration:
- no longer extends HashMap; holds a private internal map
- add withOverrides(Map) bulk setter and read-only asMap() snapshot
- read aws.region and s3.spi.endpoint from env vars / system properties
  (put-if-present, so unset region stays null and the SDK chain resolves it);
  credentials remain delegated to the AWS SDK default chain

S3FileSystemProvider:
- newFileSystem(uri, env) merges the env map (minus bucket-creation keys)
  into the file system configuration, overriding URI-derived values
- gate FileSystemAlreadyExistsException on FS_CACHE membership (lazy or
  explicit view); remove the EXPLICITLY_CREATED registry
- provider operations read timeouts from the target path's own
  getConfiguration() (fixes #597 last-writer-wins)
- remove deprecated shared configuration field and setConfiguration

S3FileSystem / S3ClientProvider:
- drop the provider.setConfiguration side effect
- remove the unused universalClient field

Tests: migrate config test off the Map supertype (asMap/withOverrides); add
region/endpoint env-read, withOverrides, asMap-unmodifiable,
credentials-not-read, env-merge, per-filesystem-timeout (#597),
lazy-view-throws, regular-client region/endpoint/credentials, and a
region-precedence property test.

Tooling: record the intentional API breaks in .palantir/revapi.yml.

Docs/examples: add ConfiguredFileSystemExample; rewrite the README
Configuration section (fix stale properties-file reference and
fragment-*/max-fragment-* inconsistency, expand the key table, four-tier
precedence, per-filesystem newFileSystem subsection); update AWS Credentials
and the Breaking changes in 3.0 section; revise docs/newfilesystem-contract-fix.md
for the FS_CACHE-gating revision.